syntax = "proto3";

option go_package = "git.edenfarm.id/project-version3/erp-services/erp-protobuf/gen/proto/boilerplate_service";
option objc_class_prefix = "EOP";

package proto.boilerplate_service;

import "google/protobuf/timestamp.proto";

service BoilerplateService {
    rpc GetPerson(GetPersonRequest) returns (GetPersonResponse) {}
    rpc GetPersonByID(GetPersonByIDRequest) returns (GetPersonByIDResponse) {}
    rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse) {}
    rpc UpdatePerson(UpdatePersonRequest) returns (UpdatePersonResponse) {}
    rpc DeletePerson(DeletePersonRequest) returns (DeletePersonResponse) {}
}

message Person {
    int64 id = 1;
    string name = 2;
    string city = 3;
    string country = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message GetPersonRequest{
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
}

message GetPersonResponse{
    int32 code = 1;
    string message = 2;
    repeated Person data = 3;
}

message GetPersonByIDRequest{
    int64 id = 1;
}

message GetPersonByIDResponse{
    int32 code = 1;
    string message = 2;
    Person data = 3;
}

message CreatePersonRequest{
    Person person = 1;
}

message CreatePersonResponse{
    int32 code = 1;
    string message = 2;
    Person data = 3;
}

message UpdatePersonRequest{
    Person person = 1;
}

message UpdatePersonResponse{
    int32 code = 1;
    string message = 2;
    Person data = 3;
}

message DeletePersonRequest{
    int64 id = 1;
    string note = 2;
}

message DeletePersonResponse{
    int32 code = 1;
    string message = 2;
}
